{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 77,
  "lineage": "b04f5093-a1c7-0f3c-4f73-94baf6b7d986",
  "resources": [
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mendedi-linux-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/networkInterfaces/mendedi-linux-02-nic",
            "ip_configuration": [
              {
                "name": "mendedi-linux-02-nic-ipconfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/publicIPAddresses/mendedi-linux-02-public-ip",
                "subnet_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/virtualNetworks/mendedi-linux-02-vnet/subnets/mendedi-linux-02-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "mendedi-linux-02-nic",
            "network_security_group_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-02-nsg",
            "private_ip_address": "20.0.1.4",
            "private_ip_addresses": [
              "20.0.1.4"
            ],
            "resource_group_name": "mendedi-rg-02"
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-linux-nsg",
            "azurerm_public_ip.mendedi-linux-public-ip",
            "azurerm_resource_group.mendedi-rg",
            "azurerm_subnet.mendedi-linux-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mendedi-linux-nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/networkInterfaces/mendedi-linux-01-nic",
            "ip_configuration": [
              {
                "name": "mendedi-linux-01-nic-ipconfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/publicIPAddresses/mendedi-linux-01-public-ip",
                "subnet_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/virtualNetworks/mendedi-linux-01-vnet/subnets/mendedi-linux-01-subnet"
              }
            ],
            "location": "canadacentral",
            "name": "mendedi-linux-01-nic",
            "network_security_group_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-01-nsg",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mendedi-rg-01"
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-linux-nsg",
            "azurerm_public_ip.mendedi-linux-public-ip",
            "azurerm_resource_group.mendedi-rg",
            "azurerm_subnet.mendedi-linux-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mendedi-linux-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-02-nsg",
            "location": "canadacentral",
            "name": "mendedi-linux-02-nsg",
            "resource_group_name": "mendedi-rg-02",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mendedi-linux-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-01-nsg",
            "location": "canadacentral",
            "name": "mendedi-linux-01-nsg",
            "resource_group_name": "mendedi-rg-01",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mendedi-linux-nsg-rule-ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-02-nsg/securityRules/SSH inbound",
            "name": "SSH inbound",
            "network_security_group_name": "mendedi-linux-02-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "mendedi-rg-02",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-linux-nsg",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mendedi-linux-nsg-rule-ssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-01-nsg/securityRules/SSH inbound",
            "name": "SSH inbound",
            "network_security_group_name": "mendedi-linux-01-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "mendedi-rg-01",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-linux-nsg",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mendedi-linux-public-ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/publicIPAddresses/mendedi-linux-02-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "mendedi-linux-02-public-ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "mendedi-rg-02",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mendedi-linux-public-ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/publicIPAddresses/mendedi-linux-01-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "mendedi-linux-01-public-ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "mendedi-rg-01",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mendedi-linux-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.1.0/24",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/virtualNetworks/mendedi-linux-02-vnet/subnets/mendedi-linux-02-subnet",
            "name": "mendedi-linux-02-subnet",
            "resource_group_name": "mendedi-rg-02",
            "virtual_network_name": "mendedi-linux-02-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg",
            "azurerm_virtual_network.mendedi-linux-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mendedi-linux-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/virtualNetworks/mendedi-linux-01-vnet/subnets/mendedi-linux-01-subnet",
            "name": "mendedi-linux-01-subnet",
            "resource_group_name": "mendedi-rg-01",
            "virtual_network_name": "mendedi-linux-01-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg",
            "azurerm_virtual_network.mendedi-linux-vnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mendedi-linux-nsg-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/virtualNetworks/mendedi-linux-02-vnet/subnets/mendedi-linux-02-subnet",
            "network_security_group_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-02-nsg",
            "subnet_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/virtualNetworks/mendedi-linux-02-vnet/subnets/mendedi-linux-02-subnet"
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-linux-nsg",
            "azurerm_subnet.mendedi-linux-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mendedi-linux-nsg-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/virtualNetworks/mendedi-linux-01-vnet/subnets/mendedi-linux-01-subnet",
            "network_security_group_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/networkSecurityGroups/mendedi-linux-01-nsg",
            "subnet_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/virtualNetworks/mendedi-linux-01-vnet/subnets/mendedi-linux-01-subnet"
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-linux-nsg",
            "azurerm_subnet.mendedi-linux-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.centos-02",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mendedi-linux-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/22"
            ],
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-02/providers/Microsoft.Network/virtualNetworks/mendedi-linux-02-vnet",
            "location": "canadacentral",
            "name": "mendedi-linux-02-vnet",
            "resource_group_name": "mendedi-rg-02"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "module": "module.centos-01",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mendedi-linux-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg-01/providers/Microsoft.Network/virtualNetworks/mendedi-linux-01-vnet",
            "location": "canadacentral",
            "name": "mendedi-linux-01-vnet",
            "resource_group_name": "mendedi-rg-01"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    }
  ]
}